syntax = "proto3";

package internal;

message DBMeta {
	string TimeQuantum = 1;
	string ColumnLabel = 2;
}

message FrameMeta {
	string TimeQuantum = 1;
	string RowLabel = 2;
	int64 CacheSize = 3;
}

message Bitmap {
	repeated uint64 Bits = 1;
	repeated Attr Attrs = 2;
}

message Pair {
	uint64 Key = 1;
	uint64 Count = 2;
}

message Bit {
	uint64 BitmapID = 1;
	uint64 ProfileID = 2;
	int64 Timestamp = 3;
}

message Profile {
	uint64 ID = 1;
	repeated Attr Attrs = 2;
}

message Attr {
	string Key = 1;
	uint64 Type = 2;
	string StringValue = 3;
	uint64 UintValue = 4;
	bool BoolValue = 5;
	double FloatValue = 6;
}

message AttrMap {
	repeated Attr Attrs = 1;
}

message QueryRequest {
	string DB = 1;
	string Query = 2;
	repeated uint64 Slices = 3;
	bool Profiles = 4;
	string Quantum = 5;
	bool Remote = 6;
}

message QueryResponse {
	string Err = 1;
	repeated QueryResult Results = 2;
	repeated Profile Profiles = 3;
}

message QueryResult {
	Bitmap Bitmap = 1;
	uint64 N = 2;
	repeated Pair Pairs = 3;
	bool Changed = 4;
}

message ImportRequest {
	string DB = 1;
	string Frame = 2;
	uint64 Slice = 3;
	repeated uint64 BitmapIDs = 4;
	repeated uint64 ProfileIDs = 5;
	repeated int64 Timestamps = 6;
}

message ImportResponse {
	string Err = 1;
}

message BlockDataRequest {
	string DB = 1;
	string Frame = 2;
	uint64 Slice = 3;
	uint64 Block = 4;
}

message BlockDataResponse {
	repeated uint64 BitmapIDs = 1;
	repeated uint64 ProfileIDs = 2;
}

message Cache {
	repeated uint64 BitmapIDs = 1;
}

message MaxSlicesResponse {
    map<string, uint64> MaxSlices = 1;
}

message CreateSliceMessage {
    string DB = 1;
    uint64 Slice = 2;
}

message DeleteDBMessage {
    string DB = 1;
}

message CreateDBMessage {
    string DB = 1;
    DBMeta Meta = 2;
}

message CreateFrameMessage {
    string DB = 1;
    string Frame = 2;
    FrameMeta Meta = 3;
}

message DeleteFrameMessage {
    string DB = 1;
    string Frame = 2;
}

message Frame {
	string Name = 1;
    FrameMeta Meta = 2;
}

message DB {
	string Name = 1;
    DBMeta Meta = 2;
    uint64 MaxSlice = 3;
	repeated Frame Frames = 4;
}

message NodeState {
    string Host = 1;
    string State = 2;
	repeated DB DBs = 3;
}
